--- a/web/pwa/src/app/page/storage/action-menu-cards/action-menu-cards.component.html
+++ b/web/pwa/src/app/page/storage/action-menu-cards/action-menu-cards.component.html
@@ -1,7 +1,7 @@
 <ion-list>
     <ion-item lines="full" button [detail]="false" (click)="onExport?.()" [disabled]="cardCount === 0">
         <ion-icon name="share-outline" slot="end"></ion-icon>
-        Save
+        Export
     </ion-item>
     <ion-item lines="full" button [detail]="false" (click)="onDelete?.()" [disabled]="cardCount === 0">
         <ion-icon name="trash-outline" slot="end"></ion-icon>
