--- a/web/pwa/src/app/page/storage/context-menu-breadcrumb/context-menu-breadcrumb.component.scss
+++ b/web/pwa/src/app/page/storage/context-menu-breadcrumb/context-menu-breadcrumb.component.scss
@@ -4,9 +4,9 @@
     text-overflow: ellipsis;
 
     // WORKAROUND Ionic bug that causes "end" slot to overflow to next line
-    max-width: 170px;
+    max-width: calc(var(--cp-breadcrumb-menu-width) - 30px);
 
     .ios & {
-        max-width: 130px;
+        max-width: calc(var(--cp-breadcrumb-menu-width) - 70px);
     }
 }
