Enable quick session switch.

--- a/web/pwa/src/app/component/breadcrumb/breadcrumb.component.scss
+++ b/web/pwa/src/app/component/breadcrumb/breadcrumb.component.scss
@@ -1,7 +1,7 @@
 :host {
     cursor: pointer;
 
-    display: flex;
+    display: inline-flex;
     flex-direction: row;
     align-items: center;
 
