--- a/web/pwa/src/global.scss
+++ b/web/pwa/src/global.scss
@@ -144,8 +144,8 @@ markdown h1:not(:first-child) {
 }
 
 // Work around home indicator overlapping UI in landscape
-@media (orientation: landscape) {
-    html.ios {
-        --ion-safe-area-bottom: calc(sign(env(safe-area-inset-left)) * max(20px, env(safe-area-inset-bottom)))
-    }
-}
+// @media (orientation: landscape) {
+//     html.ios {
+//         --ion-safe-area-bottom: calc(sign(env(safe-area-inset-left)) * max(20px, env(safe-area-inset-bottom)))
+//     }
+// }
