Refine box shadow.

--- a/web/pwa/src/global.scss
+++ b/web/pwa/src/global.scss
@@ -145,6 +145,6 @@ markdown h1:not(:first-child) {
 
 @media (prefers-color-scheme: dark) {
     .ios ion-modal {
-        --box-shadow: 0 0 30px #0b0b0b; 
+        --box-shadow: 0 0 100px  #111; 
     }
 }
