Remove iOS 17.4 warning, link handling, ics generator.

--- a/web/pwa/src/app/page/about/about.page.html
+++ b/web/pwa/src/app/page/about/about.page.html
@@ -20,12 +20,7 @@
     </div>
 
     <div class="markdown-container">
-        <markdown
-            [src]="url"
-            [disableSanitizer]="true"
-            (load)="loading = false"
-            (click)="cpeLinkService.handleClick($event)"
-        ></markdown>
+        <markdown [src]="url" [disableSanitizer]="true" (load)="loading = false"></markdown>
     </div>
 
     <div class="version">
