--- a/web/pwa/src/app/page/about/about.page.html
+++ b/web/pwa/src/app/page/about/about.page.html
@@ -27,7 +27,9 @@
         CloudpilotEmu version {{ version }}
         <br />
         <a href="javascript:" (click)="showChangelog()">Changelog</a>
-        <div *ngIf="serviceWorkerAvailable">app cached for offline use</div>
+        <div *ngIf="serviceWorkerAvailable">
+            app cached for offline use | <a (click)="resetWorker()">reset worker</a>
+        </div>
     </div>
 
     <img class="logo" src="assets/logo.svg" />
