--- a/web/pwa/src/app/page/settings/settings.page.html
+++ b/web/pwa/src/app/page/settings/settings.page.html
@@ -54,7 +54,7 @@
                 <ion-select
                     class="redirection-mode-select"
                     formControlName="networkRedirectionMode"
-                    label="Redirection mode"
+                    label="Redirection method"
                 >
                     <ion-select-option *ngFor="let mode of networkRedirectionModes" [value]="mode[0]"
                         >{{ mode[1] }}
